<resources>
    <string name="app_name">TCH057-03-TP2</string>
    <string name="title_activity_connexion">Connexion</string>
    <string name="title_activity_inscription">Inscription</string>
    <string name="title_activity_accueil">Accueil</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_historique">Historique</string>
    <string name="voyage_voyage">Voyage Voyage</string>
    <string name="description">Description</string>
    <string name="prix">Prix</string>
    <string name="voyage_vers">Voyage vers</string>
    <string name="todo">TODO</string>
    <string name="destination">Destination</string>
    <string name="continuer">Continuer</string>
    <string name="courriel">Courriel</string>
    <string name="remplissez_les_informations_suivantes">Remplissez les informations suivantes</string>
    <string name="mot_de_passe">Mot de Passe</string>
    <string name="bienvenue">Bienvenue!</string>
    <string name="connectez_vous">Connectez-Vous</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="r_servations_de">Réservations de</string>
    <string name="nom_utilisateur">Nom utilisateur</string>
    <string name="adresse">Adresse</string>
    <string name="ge">Âge</string>
    <string name="nom">Nom</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="inscription">Inscription</string>
    <string name="pr_nom">Prénom</string>
    <string name="choisir_vos">Choisir vos</string>
    <string name="filtres">Filtres</string>
    <string name="bonjour">Bonjour</string>
    <string name="r_servations">Réservations</string>
    <string name="x">X</string>
    <string name="crystal_cove">Crystal Cove</string>
    <string name="dur_e_5_jours">Durée : 5 jours</string>
    <string name="_22_avril">22 Avril</string>
    <string name="_5_mai">5 Mai</string>
    <string name="places_restantes_13">Places restantes : 13</string>
    <string name="reserver_une_place">Reserver une place</string>
    <string name="prix_4_200">Prix : $4,200</string>
    <string name="search_filters">Search filters</string>
    <string name="pays">Pays</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="date_de_d_part">Date de départ</string>
    <string name="date_de_retour">Date de retour</string>
    <string name="appliquer_les_filtres">Appliquer les filtres</string>
    <string name="type_de_voyage">Type de voyage</string>
    <string name="date">Date</string>
    <string name="_12_12_2024">12/12/2024</string>
    <string name="r_serv_le_02_01_2025">Réservé le 02/01/2025</string>
    <string name="prix_2_800">Prix : 2,800$</string>
    <string name="annuler">Annuler</string>
</resources>