<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/versVoyagelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/versVoyageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/negative_padding"
            android:fontFamily="@font/abeezee_regular"
            android:text="@string/voyage_vers"
            android:textColor="@color/white_50"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="18dp" />

        <TextView
            android:id="@+id/voyageNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlamdisplay_regular"
            android:text="@string/destination"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rounded_frame_360"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/prixText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlamdisplay_regular"
            android:text="@string/prix"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="18dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/voyageImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/blue_rounded_frame_10"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/versVoyagelayout" />

    <TextView
        android:id="@+id/voyageDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>