<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/dark_blue"
    tools:context=".activite.Voyage">

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oleoscriptswashcaps_regular"
        android:text="@string/voyage_voyage"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_text">

        <TextView
            android:id="@+id/voyageSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abeezee_regular"
            android:text="@string/voyage_vers"
            android:textColor="@color/white_50"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/voyageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/negative_padding"
            android:fontFamily="@font/adlamdisplay_regular"
            android:text="@string/crystal_cove"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/voyageImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@drawable/blue_rounded_frame_10"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/voyageDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/voyageImage" />

    <!-- Trip Duration -->
    <TextView
        android:id="@+id/tripDurationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/adlamdisplay_regular"
        android:text="@string/dur_e_5_jours"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/voyageDescription"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Date Selection -->
    <HorizontalScrollView
        android:id="@+id/dateSelectionScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tripDurationText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/dateContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!-- Example Date Buttons -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/date1"
                android:layout_width="wrap_content"
                android:fontFamily="@font/adlamdisplay_regular"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/blue_rounded_frame_360"
                android:text="@string/_22_avril"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/date2"
                android:layout_width="wrap_content"
                android:fontFamily="@font/adlamdisplay_regular"
                android:layout_height="40dp"
                android:background="@drawable/white_rounded_frame_360"
                android:text="@string/_5_mai"
                android:textColor="@color/white_50"
                android:textSize="14sp" />
        </LinearLayout>
    </HorizontalScrollView>

    <!-- Number of Places -->
    <LinearLayout
        android:id="@+id/numberOfPeopleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:background="@drawable/white_rounded_frame_24"
        app:layout_constraintTop_toBottomOf="@id/dateSelectionScroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/peopleSelector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_rounded_frame_360"
            android:padding="8dp" />

        <TextView
            android:id="@+id/placesRestantesText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlamdisplay_regular"
            android:text="@string/places_restantes_13"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginStart="16dp" />
    </LinearLayout>

    <!-- Booking CTA -->
    <LinearLayout
        android:id="@+id/bookingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/numberOfPeopleLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bookButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/blue_rounded_frame_360"
            android:fontFamily="@font/adlamdisplay_regular"
            android:text="@string/reserver_une_place"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/voyagePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlamdisplay_regular"
            android:text="@string/prix_4_200"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="16dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>