<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/dark_blue"
    tools:context=".activite.MainActivity">

    <TextView
        android:id="@+id/app_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oleoscriptswashcaps_regular"
        android:text="@string/voyage_voyage"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/titre_page_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlamdisplay_regular"
            android:text="@string/inscription"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/informationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/negative_padding"
            android:fontFamily="@font/abeezee_regular"
            android:text="@string/remplissez_les_informations_suivantes"
            android:textAlignment="center"
            android:textColor="@color/white_50"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/continuerBtn"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


            <EditText
                android:id="@+id/nom_imput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/white_rounded_frame_24_10"
                android:ems="10"
                android:fontFamily="@font/adlamdisplay_regular"
                android:hint="@string/nom"
                android:inputType="text"
                android:padding="@dimen/large_padding"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="VisualLintTextFieldSize" />


            <EditText
                android:id="@+id/prenom_imput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:autofillHints=""
                android:background="@drawable/white_rounded_frame_10"
                android:ems="10"
                android:fontFamily="@font/adlamdisplay_regular"
                android:hint="@string/pr_nom"
                android:inputType="text"
                android:padding="@dimen/large_padding"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="VisualLintTextFieldSize" />


            <EditText
                android:id="@+id/email_imput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:background="@drawable/white_rounded_frame_10"
                android:ems="10"
                android:fontFamily="@font/adlamdisplay_regular"
                android:hint="@string/courriel"
                android:inputType="textEmailAddress"
                android:padding="@dimen/large_padding"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/age_imput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:autofillHints=""
                android:background="@drawable/white_rounded_frame_10"
                android:ems="10"
                android:fontFamily="@font/adlamdisplay_regular"
                android:hint="@string/ge"
                android:inputType="number"
                android:padding="@dimen/large_padding"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/phone_imput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:background="@drawable/white_rounded_frame_10"
                android:ems="10"
                android:fontFamily="@font/adlamdisplay_regular"
                android:hint="@string/t_l_phone"
                android:inputType="phone"
                android:padding="@dimen/large_padding"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/adress_imput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:autofillHints=""
                android:background="@drawable/white_rounded_frame_10"
                android:ems="10"
                android:fontFamily="@font/adlamdisplay_regular"
                android:hint="@string/adresse"
                android:inputType="textPostalAddress"
                android:padding="@dimen/large_padding"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/password_imput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_padding"
                android:background="@drawable/white_rounded_frame_10"
                android:ems="10"
                android:fontFamily="@font/adlamdisplay_regular"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:padding="@dimen/large_padding"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                tools:ignore="VisualLintTextFieldSize" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continuerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:background="@drawable/blue_rounded_frame_360"
        android:paddingHorizontal="50dp"
        android:paddingVertical="20dp"
        android:text="@string/s_inscrire"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>