<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/versVoyagelayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/white_rounded_frame_360"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/prixText"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adlamdisplay_regular"
            android:text="@string/prix"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="67dp"
            tools:layout_editor_absoluteY="18dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/voyageImage"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_image_background"
        android:clipToOutline="true"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/versVoyagelayout" />

    <TextView
        android:id="@+id/voyageDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/countryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/adlamdisplay_regular"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Pays : Maldives" />

    <TextView
        android:id="@+id/voyageTitle"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/adlamdisplay_regular"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Lieu : Crystal Cove" />

    <TextView
        android:id="@+id/versVoyageTexts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/voyage_vers"
        android:textColor="@color/white_50"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="versVoyageText" />

    <TextView
        android:id="@+id/description"
        android:layout_width="423dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/voyage_vers"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voyageImage"
        tools:text="versVoyageText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/white_line"
        app:layout_constraintTop_toBottomOf="@+id/description"
        android:layout_marginTop="@dimen/normal_padding"
        android:layout_marginBottom="@dimen/normal_padding"/>

</androidx.constraintlayout.widget.ConstraintLayout>